nohup.out
make: Warning: File `src/depparser/Instance.h' has modification time 1.2e+02 s in the future
g++ -c -Wall -O3 -std=c++11 -I./src/include/ -I./src/include/mshadow -fopenmp -msse3 -funroll-loops -Wno-unused-parameter -Wno-unknown-pragmas -DMSHADOW_USE_CBLAS=1 -DMSHADOW_USE_MKL=0 -DMSHADOW_RABIT_PS=0 -DMSHADOW_DIST_PS=0 -std=c++11 src/depparser/FeatureExtractor.cpp -o FeatureExtractor.o 
In file included from src/depparser/GlobalExample.h:13:0,
                 from src/depparser/FeatureExtractor.h:15,
                 from src/depparser/FeatureExtractor.cpp:9:
src/depparser/Instance.h:25:19: error: ‘FeatureExtractor’ has not been declared
     void getCache(FeatureExtractor& fe){
                   ^
src/depparser/Instance.h: In member function ‘void Instance::getCache(int&)’:
src/depparser/Instance.h:33:30: error: request for member ‘getWord’ in ‘fe’, which is of non-class type ‘int’
             int wordIdx = fe.getWord(iter->first);
                              ^
src/depparser/Instance.h:34:29: error: request for member ‘getTag’ in ‘fe’, which is of non-class type ‘int’
             int tagIdx = fe.getTag(iter->second);
                             ^
In file included from src/depparser/FeatureExtractor.cpp:9:0:
src/depparser/FeatureExtractor.h: In member function ‘void FeatureExtractor::getCache(Instance&)’:
src/depparser/FeatureExtractor.h:94:16: error: ‘DepParseInput’ has no member named ‘wordIndexCache’
     inst.input.wordIndexCache.resize(input.size());
                ^
src/depparser/FeatureExtractor.h:94:38: error: ‘input’ was not declared in this scope
     inst.input.wordIndexCache.resize(input.size());
                                      ^
src/depparser/FeatureExtractor.h:95:16: error: ‘DepParseInput’ has no member named ‘tagIndexCache’
     inst.input.tagIndexCache.resize(input.size());
                ^
src/depparser/FeatureExtractor.h:116:14: error: ‘DepParseInput’ has no member named ‘wordCache’
   inst.input.wordCache[index] = wordIdx;
              ^
src/depparser/FeatureExtractor.h:117:14: error: ‘DepParseInput’ has no member named ‘tagCache’
   inst.input.tagCache[index] = tagIdx;
              ^
src/depparser/FeatureExtractor.cpp: In member function ‘void FeatureExtractor::generateTrainingExamples(std::vector<std::vector<std::pair<std::basic_string<char>, std::basic_string<char> > > >, std::vector<DepTree>, std::vector<GlobalExample>&)’:
src/depparser/FeatureExtractor.cpp:224:26: error: ‘wordIndexCache’ was not declared in this scope
    featureExtract(state, wordIndexCache, tagIndexCache, features);
                          ^
src/depparser/FeatureExtractor.cpp:224:42: error: ‘tagIndexCache’ was not declared in this scope
    featureExtract(state, wordIndexCache, tagIndexCache, features);
                                          ^
src/depparser/FeatureExtractor.cpp:245:31: error: no matching function for call to ‘FeatureExtractor::getCache(Instance*&)’
         getCache(ge_i.instance);
                               ^
src/depparser/FeatureExtractor.cpp:245:31: note: candidate is:
In file included from src/depparser/FeatureExtractor.cpp:9:0:
src/depparser/FeatureExtractor.h:92:6: note: void FeatureExtractor::getCache(Instance&)
 void getCache(Instance & inst){
      ^
src/depparser/FeatureExtractor.h:92:6: note:   no known conversion for argument 1 from ‘Instance*’ to ‘Instance&’
In file included from src/depparser/DepTreeNode.h:15:0,
                 from src/depparser/DepTree.h:15,
                 from src/depparser/FeatureExtractor.h:13,
                 from src/depparser/FeatureExtractor.cpp:9:
src/depparser/DepAction.h: At global scope:
src/depparser/DepAction.h:15:11: warning: ‘labelNum’ defined but not used [-Wunused-variable]
 const int labelNum = CConfig::nLabelNum;
           ^
src/depparser/DepAction.h:65:1: warning: ‘unsigned int DecodeLabel(const unsigned int&)’ defined but not used [-Wunused-function]
 DecodeLabel(const unsigned & action) {
 ^
make: *** [FeatureExtractor.o] Error 1
